--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <section class="about">
         <span id="sub-bg"></span>
         <div class="container">
-          <div class="about__content flex">
+          <div id="about1" class="about__content flex">
             <div class="content__left">
               <span></span>
               <span></span>
@@ -113,7 +113,7 @@
             </div>
           </div>
 
-          <div class="about__content flex">
+          <div id="about2" class="about__content flex">
             <div class="content__right">
               <img
                 src="./assets/img/smiling-curly-brunette-fitness-woman-with-towel-listening-music-removebg-preview.png"
@@ -171,5 +171,7 @@
         </div>
       </section>
     </div>
+
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
