--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+      crossorigin="anonymous"
+    />
     <title>ChampZ</title>
   </head>
   <body>
@@ -62,13 +69,15 @@
 
       <section class="about">
         <span id="sub-bg"></span>
+        <span class="sub-bg"></span>
+        <span class="sub-bg"></span>
         <div class="container">
-          <div id="about1" class="about__content flex">
+          <div id="about1" class="about__content scroll flex">
             <div class="content__left">
               <span></span>
               <span></span>
-              <h2>Set Your Goals</h2>
-              <p>
+              <h2 class="title_sec">Set Your Goals</h2>
+              <p class="desc_sec">
                 Goals can help you do that because you know have an end in mind,
                 and you just have to figure out to the means to do it.
               </p>
@@ -113,7 +122,7 @@
             </div>
           </div>
 
-          <div id="about2" class="about__content flex">
+          <div id="about2" class="about__content scroll flex">
             <div class="content__right">
               <img
                 src="./assets/img/smiling-curly-brunette-fitness-woman-with-towel-listening-music-removebg-preview.png"
@@ -159,14 +168,32 @@
             <div class="content__left">
               <span></span>
               <span></span>
-              <h2>Measure Your Performance</h2>
-              <p>
+              <h2 class="title_sec">Measure Your Performance</h2>
+              <p class="desc_sec">
                 Tracking the consistency of your runs anh workouts allows you to
                 gain a better understanding of your goals.
               </p>
 
               <a href="" class="btn btn--bg">Check My Activity</a>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="video scroll">
+        <span class="sub-bg"></span>
+        <div class="container video__content">
+          <div class="text">
+            <h2 class="title_sec">How we make you to be a champion</h2>
+            <p class="desc_sec">
+              Winner are not born, but forged with hard work
+            </p>
+          </div>
+          <div class="media" onclick="remoteVideo()">
+            <video
+              src="./assets/video/pexels-tima-miroshnichenko-6388436 (1).mp4"
+              muted
+            ></video>
+            <i class="fas fa-play"></i>
           </div>
         </div>
       </section>
