--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             <video
               src="./assets/video/pexels-tima-miroshnichenko-6388436 (1).mp4"
               muted
+              loop
             ></video>
             <i class="fas fa-play"></i>
           </div>
